--- a/style.css
+++ b/style.css
@@ -12,7 +12,6 @@ font-family: 'Sacramento', cursive;
 body {
     margin: 0;
     font-family: 'Roboto Condensed', sans-serif;
-    background-color: whitesmoke;
 }
 
 main > section {
@@ -30,12 +29,71 @@ main > section {
     min-height: 100vh;
 }
 
+
 /* Give each section a different background color. 
 The id names are unique so styles here apply just 
 the section they name. */
-#page1{
+#intro-page{
     background-color: whitesmoke;
 }
+
+    nav{
+        background-color: teal;
+        display: grid;
+        grid-template-columns: 10% 1fr 1fr 10%;
+        min-height: 10vh;
+        color: white;
+        align-items: center;
+    }
+    
+    #intro-name{
+        grid-column: 2/3;
+        font-size: 24px ;
+    } 
+
+    #intro{
+        display: flex;
+        height: 80vh;
+        justify-content: center;
+        align-items: center;
+    }
+        #intro img{
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            border-radius: 0.5rem;
+        }
+    #page1{
+        height: 60%;
+        width: 100%;
+        position: relative;
+    }
+
+    #page1::after {
+        content: "";
+        background: black;
+        border-radius: 0.5rem;
+        opacity: 0.25;
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        left: 0;
+        top:0;
+    }
+
+    .headline{
+        position: absolute;
+        top: 60%;
+        left: 20%;
+        font-size: 50px; 
+        transform: translate(-20%, -70%);
+        background-color: lightskyblue;
+        color: white;
+        padding: 0 0.5rem;
+        border-radius: 0.5rem;
+        z-index: 3;
+    }
+
 
 #page2{
     background-color: teal;
