--- a/style.css
+++ b/style.css
@@ -51,6 +51,11 @@ the section they name. */
         font-size: 24px ;
     } 
 
+    #final-project{
+        justify-self: end;
+        font-size: 24px
+    }
+
     #intro{
         display: flex;
         height: 80vh;
@@ -61,7 +66,6 @@ the section they name. */
             width: 100%;
             height: 100%;
             object-fit: cover;
-            border-radius: 0.5rem;
         }
     #page1{
         height: 60%;
@@ -72,7 +76,6 @@ the section they name. */
     #page1::after {
         content: "";
         background: black;
-        border-radius: 0.5rem;
         opacity: 0.25;
         width: 100%;
         height: 100%;
@@ -84,13 +87,12 @@ the section they name. */
     .headline{
         position: absolute;
         top: 60%;
-        left: 20%;
+        left: 10%;
         font-size: 50px; 
         transform: translate(-20%, -70%);
-        background-color: lightskyblue;
+        background-color: teal;
         color: white;
         padding: 0 0.5rem;
-        border-radius: 0.5rem;
         z-index: 3;
     }
 
@@ -131,19 +133,20 @@ the section they name. */
 
         
 #page3{
-    background-color: #64defd;
+    background-color: whitesmoke;
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
     font-family: 'Roboto Condensed', sans-serif;
 }
-    #gdp-mult-formulas{
+    #mult-formulas{
         display: flex;
         flex-direction: column;
         margin: 0 3rem;
         padding: 1rem;
-        background-color: white;
+        background-color: teal;
+        color: white;
     }
 
     #display-elements3{
@@ -151,20 +154,12 @@ the section they name. */
         flex-direction: column;
         margin: 0 3rem;
         padding: 1rem;
-        background-color: white;
-    }
-
-    #mpc_2{
-        padding: 0.5rem;
-       
-    }
-
-    #mps_2{
-        padding: 0.5rem;
-    }  
+        background-color: teal;
+        color: white;
+    } 
 
 #page4{
-    background-color: #4e9dc2;
+    background-color: teal;
     display: flex;
     flex-direction: row;
     justify-content: center;
