--- a/style.css
+++ b/style.css
@@ -183,4 +183,20 @@ the section they name. */
         background-color: white;
     }
 
+footer{
+    background-color: whitesmoke;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-family: 'Roboto Condensed', sans-serif;
+    font-size: 15px;
+}
+
+#my-name{
+    background-color: teal;
+    color: white;
+    padding: 0.5rem;
+}
+
 
